--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -442,6 +442,7 @@ textarea {
 
 .action.delete-item {
   left: 10px;
+  padding: 0;
 }
 
 .delete-item .icon-bg {
@@ -477,7 +478,7 @@ textarea {
 }
 
 .action.edit-item {
-  left: 60px;
+  left: 55px;
 }
 
 .item:hover .action {
@@ -670,7 +671,7 @@ font-size: 1.5rem;
 }
 
 .select2-container--open .select2-dropdown {
-  z-index: 9999 !important;
+  z-index: 999999 !important;
 }
 
 .select2-selection.select2-selection--multiple {
