--- a/app/views/list_item/_claimed.html.erb
+++ b/app/views/list_item/_claimed.html.erb
@@ -3,5 +3,7 @@
     <i class="fa-solid fa-square fa-stack-2x icon-bg"></i>
     <i class="fa-solid fa-square-check fa-stack-1x fa-inverse icon-fg"></i>
   </span>
-  <span class='claim-banner'>Take this off my list <i class="fa-regular fa-face-tired"></i></span>
+  <div class='d-none d-md-block'>
+    <span class='claim-banner'>Take this off my list <i class="fa-regular fa-face-tired"></i></span>
+  </div>
 <% end %>
