--- a/app/views/list_item/_unclaimed.html.erb
+++ b/app/views/list_item/_unclaimed.html.erb
@@ -3,5 +3,7 @@
     <i class="fa-solid fa-square fa-stack-2x icon-bg"></i>
     <i class="fa-solid fa-gift fa-stack-1x fa-inverse icon-fg"></i>
   </span>
-  <span class='claim-banner'>I'm getting this <i class="fa-regular fa-face-grin-hearts"></i></span>
+  <div class='d-none d-md-block'>
+    <span class='claim-banner'>I'm getting this <i class="fa-regular fa-face-grin-hearts"></i></span>
+  </div>
 <% end %>
