--- a/app/views/layouts/_message.html.erb
+++ b/app/views/layouts/_message.html.erb
@@ -1,10 +1,10 @@
 <% flash.each do |type, msg| %>
-<div class='message with-progress'>
+<div class='message with-progress' data-controller='message' data-message-target='msg'>
   <div class='text'>
     <%= msg %>
   </div>
   <div class="progress">
-    <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" data-message-target='progress'></div>
   </div>
 </div>
 <% end %>
