--- a/app/views/list_item/claim.js.erb
+++ b/app/views/list_item/claim.js.erb
@@ -1,3 +1,4 @@
 $("#<%= escape_javascript(@item_id) %>").html("<%= escape_javascript(render partial: 'list_item/item_inner', locals: { item: @list_item }) %>");
+$(".mobile-claim-message-container").html("<%= escape_javascript(render partial: 'list_item/mobile/claim_message', locals: { claimed: @list_item.claimed? }) %>");
 
 $('[data-toggle="tooltip"]').tooltip()
