--- a/app/views/account/_grouped_account_action.html.erb
+++ b/app/views/account/_grouped_account_action.html.erb
@@ -1,3 +1,3 @@
-<span class="green strong">
+<span class="green strong pill mt-0">
   <i class="fa-solid fa-square-check me-2 icon-green"></i> In Your Group
 </span>
