--- a/app/views/list_item/_new.html.erb
+++ b/app/views/list_item/_new.html.erb
@@ -9,11 +9,19 @@
       <h3>Add Wish</h3>
     </div>
 
-    <% if success %>
-      <div class='success'>
-        Made a wish!
-      </div>
-    <% end %>
+    <div class='d-none d-md-block'>
+      <% if success %>
+        <div class='success'>
+          Made a wish!
+        </div>
+      <% end %>
+    </div>
+
+    <div class='d-block d-md-none'>
+      <% if success %>
+        <%= render partial: 'list_item/mobile/success_message', locals: { message: 'You made a wish!' } %>
+      <% end %>
+    </div>
 
     <div class="modal-body">
       <%= form_for :list_item, url: create_list_item_path, remote: true do |f| %>
