--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -144,7 +144,7 @@
     background: lightgreen;
     padding: 1rem 2rem;
     border-radius: 15px;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    box-shadow: none;
     z-index: 999999;
     font-weight: 600;
     font-size: 1rem;
