--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -427,8 +427,30 @@ textarea {
   }  
 }
 
+.pill.small {
+  padding: 5px 15px; 
+  font-size: .9rem;
+}
+
+
 .light-box-shadow.card {
   box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.2)
+}
+
+.delete-link {
+  position: absolute;
+  top: 50%;
+  right: 5px;
+  transform: translateY(-50%);
+      background: #d75959;
+    border: none;
+    color: white;
+    border-radius: 5px;
+    font-size: 1.125rem;
+}
+
+.field-wrapper {
+  position: relative;
 }
 
 // Icons 
