--- a/app/views/list_item/_edit.html.erb
+++ b/app/views/list_item/_edit.html.erb
@@ -6,7 +6,7 @@
     </div>
 
     <div class="modal-body">
-      <%= form_for :list_item, url: update_list_item_path(list_item.id), method: :patch, remote: true do |f| %>
+      <%= form_with model: list_item, url: update_list_item_path(list_item.id), data: { remote: true, controller: 'nested-form', nested_form_wrapper_selector_value: '.nested-form-wrapper' }, method: :patch do |f| %>
         <%= render partial: 'form_contents', locals: { f: f, list_item: list_item } %>
       <% end %>
     </div>
