--- a/app/views/list_item/_new.html.erb
+++ b/app/views/list_item/_new.html.erb
@@ -24,7 +24,7 @@
     </div>
 
     <div class="modal-body">
-      <%= form_for :list_item, url: create_list_item_path, remote: true do |f| %>
+      <%= form_with model: list_item, url: create_list_item_path, data: { remote: true, controller: 'nested-form', nested_form_wrapper_selector_value: '.nested-form-wrapper' } do |f| %>
         <%= render partial: 'form_contents', locals: { f: f, list_item: list_item } %>
       <% end %>
     </div>
