--- a/app/views/group_member/_group_members.html.erb
+++ b/app/views/group_member/_group_members.html.erb
@@ -4,6 +4,7 @@
     <tr>
       <th scope="col">Name</th>
       <th scope="col">Email</th>
+      <th scope='col'>Status</th>
     </tr>
   </thead>
   <tbody>
@@ -11,6 +12,7 @@
       <tr>
         <td><%= account.full_name %></td>
         <td><%= account.email %></td>
+        <td><%= account.status %></td>
       </tr>
     <% end %>
   </tbody>
