--- a/app/views/group/_my_groups.html.erb
+++ b/app/views/group/_my_groups.html.erb
@@ -1,18 +1,20 @@
 <section class='mt-5 pt-5'>
-  <div class='row'>
+  <div class='row <%= groups.count > 3 ? 'carousel' : '' %>'>
     <% @groups.each do |group| %>
-      <div class='col-4'>
-        <%= link_to group_path(group.id) do %>
-        <div class='card group-card'>
+      <div class='col-4 slide'>
+        <%= link_to group_path(group.id), remote: true do %>
+        <div class='card group-card <%= toggled_id.present? && toggled_id == group.id ? 'toggled' : '' %>' id='group-<%= group.id %>'>
           <div class='group-card-head'>
             <h5><%= group.name %></h5>
           </div>
-          <div class='group-card-body'>
-            <span>
-              Members <%= group.accounts.count %>
+          <div class='group-card-body mt-2'>
+            <span class='pills'>
+            <span class='pill light small'>
+              Members<span class='me-2'></span><%= group.accounts.count %>
             </span>
-            <span>
-              Wishes <%= group.total_wishes %>
+            <span class='pill light small'>
+              Wishes<span class='me-2'></span><%= group.total_wishes %>
+            </span>
             </span>
           </div>
         </div>
@@ -21,3 +23,84 @@
     <% end %>
   </div>
 </section>
+
+<style>
+
+.carousel { visibility: hidden; overflow: hidden; }
+.carousel.slick-initialized { visibility: visible; overflow: visible;}
+
+.arrow {
+  opacity: 0.5;
+}
+.arrow:hover {
+  opacity: 1;
+}
+
+.pill.light {
+  background: #ededed;
+  color: gray;
+}
+
+.pills .pill.light {
+  background: #ededed;
+  color: gray;
+}
+
+.carousel, .slick-list {
+  overflow: visible;
+}
+
+.slick-slide {
+  transition: opacity 0.5s ease-in, visibility 0.5s ease-in;
+}
+
+.slick-slide:not(.slick-active) {
+  # opacity: 0;
+}
+
+.arrow {
+  position: absolute;
+  border: none;
+  padding: 0;
+  width: auto;
+    width: 50px;
+    z-index: 99999;
+    top: 50%;
+    transform: translateY(-50%)
+}
+
+.carousel-prev {
+  left: -55px;
+}
+
+.carousel-next {
+  right: -55px;
+}
+
+# /* the slides */
+# .slick-slide {
+#     margin: 0 27px;
+# }
+
+# /* the parent */
+# .slick-list {
+#     margin: 0 -27px;
+# }
+
+
+.slick-slide {
+	padding: 0 8px;
+	box-sizing: border-box;
+ }
+
+.slick-slide {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.slick-slide.slick-active {
+  opacity: 1;
+  visibility: visible;
+}
+
+</style>
