--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,7 @@
       </div>
 
       <button id="scrollButton" data-controller='scroll' data-scroll-target='#scrollButton' data-action='click->scroll#scrollToTop'>☝️</button>
+      <%= render partial: 'layouts/group/footer', locals: { group: @selected_group } %>
     </div>
   </body>
 </html>
