--- a/app/views/list/_header.html.erb
+++ b/app/views/list/_header.html.erb
@@ -1,14 +1,6 @@
 <section class='header pb-5'>
   <div class='head-content'>
-    <h1>
-      <div class='d-flex justify-space-between'>
-      <% if account.present? %>
-        <%= account.full_name %>
-      <% else %>
-        Everybody's Wishes
-      <% end %>
-      </div>
-    </h1>
+    <%= render partial: 'layouts/partials/header', locals: { title: account.present? ? account.full_name : "Everybody's Wishes" } %>
     <div class='description pt-5 d-flex align-items-center'>
       <span class='pill d-flex'>
         <span class='pill-title'>Total Wishes</span> 
