--- a/app/views/list/my_claims/_header.html.erb
+++ b/app/views/list/my_claims/_header.html.erb
@@ -1,10 +1,6 @@
 <section class='header pb-5'>
   <div class='head-content'>
-    <h1>
-      <div class='d-flex justify-space-between'>
-        Gifts I'm Giving
-      </div>
-    </h1>
+    <%= render partial: 'layouts/partials/header', locals: { title: "Gifts I'm Giving" } %>
     <div class='description pt-5 d-flex'>
       <span class='pill d-flex'>
         <span class='pill-title'>Total</span> 
