--- a/app/views/layouts/partials/_header.html.erb
+++ b/app/views/layouts/partials/_header.html.erb
@@ -1,4 +1,4 @@
-<% if @selected_group.present? && current_account.has_many_groups? %>
+<% if @selected_group.present? %>
   <div class='link'>
     <span class='selected-group-header'>
       <%= @selected_group.name %> /
