--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -82,11 +82,13 @@
 }
 
 @media (min-width: 767px) {
-
+  .navbar .container {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 @media (max-width: 767px) {
-
   .btn.sign-up {
     font-size: 1.2rem;
   }
@@ -156,9 +158,11 @@
 
   .logo {
     width: 50px;
+    height: unset;
   }
   .logo.logo-big {
     width: 100px;
+    height: unset;
   }
 
   .navbar {
