--- a/app/views/list_item/_form.html.erb
+++ b/app/views/list_item/_form.html.erb
@@ -4,7 +4,9 @@
     <div class="modal-header">
       <%= if action_name == 'new' %>
         <h3>Add to My List</h3>
-      
+      <% else %>
+        <h3>Edit My List</h3>
+      <% end %>
     </div>
 
     <div class='d-none d-md-block'>
