--- a/app/views/list_item/_show.html.erb
+++ b/app/views/list_item/_show.html.erb
@@ -6,7 +6,10 @@
     </div>
 
     <div class="modal-header">
-      <h3><%= item.account.first_name %>'s Wish</h3>
+      <span class='text-center'>
+        <h3><%= item.account.first_name %>'s Wish</h3>
+        <h6 class='font-weight-light'><%= @selected_group.name %></h6>
+      </span>
     </div>
 
     <div class="modal-body">
