--- a/app/views/group_member/_show_group.html.erb
+++ b/app/views/group_member/_show_group.html.erb
@@ -3,7 +3,7 @@
     <div class='no-scroll-style card-members-mobile'>
       <div class='group-card-head-mobile d-flex justify-content-between align-items-center mb-5'>
         <h4 class='font-weight-bold mb-0'><%= group.name %></h4>
-        <span>
+        <span class='d-flex'>
         <%= link_to new_group_member_path(group.id), class: '', remote: true do %>
           <span class="fa-stack fa-1x claim-icon">
             <i class="fa-solid fa-circle fa-stack-2x icon-bg light-green"></i>
