--- a/app/views/list_item/_new.html.erb
+++ b/app/views/list_item/_new.html.erb
@@ -12,15 +12,7 @@
       </span>
     </div>
 
-    <div class='d-none d-md-block'>
-      <% if success %>
-        <div class='success'>
-          Made a wish!
-        </div>
-      <% end %>
-    </div>
-
-    <div class='d-block d-md-none'>
+    <div class='d-block'>
       <% if success %>
         <%= render partial: 'list_item/mobile/success_message', locals: { message: 'You made a wish!' } %>
       <% end %>
