--- a/app/views/list_item/_form.html.erb
+++ b/app/views/list_item/_form.html.erb
@@ -9,15 +9,7 @@
       <% end %>
     </div>
 
-    <div class='d-none d-md-block'>
-      <% if success %>
-        <div class='success'>
-          Made a wish!
-        </div>
-      <% end %>
-    </div>
-
-    <div class='d-block d-md-none'>
+    <div class='d-block'>
       <%= render partial: 'list_item/mobile/success_message', locals: { message: 'Made a wish!' } %>
     </div>
 
