--- a/app/views/group_member/_show_group.html.erb
+++ b/app/views/group_member/_show_group.html.erb
@@ -38,15 +38,23 @@
           <i class="fa-solid fa-plus me-3"></i> Add Members
         <% end %>
         <% if group.administrator == current_account %>
-          <%= link_to edit_group_path(group.id), class: 'pill pill-btn small', remote: true do %>
+          <%= link_to edit_group_path(group.id), class: 'pill pill-btn small me-0', remote: true do %>
             <i class="fa-regular fa-pen-to-square me-3"></i> Edit Group
           <% end %>
         <% end %>
       </span>
     </div>
     </div>
-    <div class='group-card-body'>
+    <div class='group-card-body' data-controller='confirmation'>
       <%= render partial: 'group_member/group_members', locals: { group_members: group_members, group: group } %>
+      <% if group.administrator == current_account %>
+        <%= link_to destroy_group_path(group.id), class: 'delete-group', data: {
+          turbo_method: "delete",
+          turbo_confirm: "Wait! Are you sure you want to delete this group? <br />All lists will be <strong>permanently lost</strong>.",
+        } do |f| %>
+          <i class="fa-solid fa-trash-can me-2"></i> Delete Group
+        <% end %>
+      <% end %>
     </div>
   </div>
   </section>
