--- a/app/views/group_member/_show_group.html.erb
+++ b/app/views/group_member/_show_group.html.erb
@@ -50,7 +50,7 @@
       <% if group.administrator == current_account %>
         <%= link_to destroy_group_path(group.id), class: 'delete-group', data: {
           turbo_method: "delete",
-          turbo_confirm: "Wait! Are you sure you want to delete this group? <br />All lists will be <strong>permanently lost</strong>.",
+          turbo_confirm: "Wait! Are you sure you want to delete <strong>#{group.name}</strong>? <br />All lists will be permanently lost."
         } do |f| %>
           <i class="fa-solid fa-trash-can me-2"></i> Delete Group
         <% end %>
