--- a/app/views/list_item/_form_contents.html.erb
+++ b/app/views/list_item/_form_contents.html.erb
@@ -29,7 +29,7 @@
   </div>
   <div class='col-12 mb-5 mt-2 mb-lg-5 mb-lg-3'>
     <%= f.label :tags %>
-    <%= f.select :tag_ids, options_for_select(Tag.all.order(:name).map { |t| [t.name, t.id] }, list_item.tags.ids), { multiple: 'multiple' }, class: 'form-select multiselect-field' %>
+    <%= f.select :tag_ids, options_for_select(Tag.all.order(:name).map { |t| [t.name, t.id] }, list_item.tags.ids), { multiple: 'multiple' }, data: { target: 'select.multiselect'}, class: 'form-select multiselect-field' %>
   </div>
   <%= f.hidden_field :list_id, value: @current_account.current_list.id %>
   <div class='col-12 d-flex justify-content-between flex-row-reverse'>
